[metadata]
name = drp-package-uspycommon
version = 2.4.1
author = Bob Ballantyne
author_email = ballantyne.robert@gmail.com
description = Distribution of base development package of DRP microservices
long_description = file: README.md
long_description_content_type = text/markdown
url = http://devpi.prod.k8s.home/testuser/drp-uspycommon
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    cachetools==5.3.1
    certifi==2024.2.2
    charset-normalizer==2.0.12
    confluent-kafka==2.1.0
    Deprecated==1.2.14
    google-auth==2.22.0
    idna==3.6
    kubernetes==29.0.0
    oauthlib==3.2.2
    prometheus-client==0.19.0
    pyasn1==0.5.1
    pyasn1-modules==0.3.0
    python-dateutil==2.8.2
    python-json-logger==2.0.7
    PyYAML==6.0.1
    PyJWT==2.8.0
    requests==2.31.0
    requests-oauthlib==1.3.1
    rsa==4.9
    six==1.16.0
    urllib3==1.26.18
    websocket-client==1.6.1
    wrapt==1.16.0
    cryptography==42.0.5
[options.packages.find]
where = src

# [options.package_data]
# * = *.yml
